tests/NormalTests/paczka1/small_fuzzy/91923899.err
Error in line 1: 6gzWX0al A770 24,4
Error in line 8: 29pPXN A673 20,6
Error in line 14: YUso A673 68,2
